feat: Add endpoint to identify is the user is an admin
